--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
 
-    <meta name="viewport content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>TypeScript Project</title>
 
@@ -14,7 +14,7 @@
 
 <body>
 
-    <script src="build/index.js defer></script>
+    <script src="build/index.js" defer></script>
 
 </body>
 
